Se añade los dos msvc

--- a/msvc-cursos/msvc-cursos/src/main/resources/application.properties
+++ b/msvc-cursos/msvc-cursos/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=msvc_cursos
+spring.application.name=msvc-cursos
 server.port=8002
 spring.datasource.url=jdbc:postgresql://localhost:5432/msvc-cursos
 spring.datasource.username=postgres
