--- a/msvc-usuarios/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/msvc-usuarios/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=msvc_usuarios
+spring.application.name=msvc-usuarios
 server.port=8001
 spring.datasource.url=jdbc:mysql://localhost:3306/msvc_usuarios
 spring.datasource.username=root
